# EVA

./: .cursorignore  .dockerignore  .gitignore  EVA项目设计文档.md  docker-compose.yml  记忆框架设计文档-20250321.md
..bfg-report/2025-05-26/15-08-19/protected-dirt/: 88c7100d-HEAD.csv
.cursor/: Dockerfile  environment.json
.cursor/rules/: project.mdc
CursorProcessCleaner/: README.md  clean_python.ps1  setup_task.ps1
EVA_backend/: .gitignore  Dockerfile.backend  __init__.py  cli.py  main.py  manage.py  pyproject.toml  supervisor.conf  utils.py
EVA_backend/.github/: dependabot.yml
EVA_backend/.github/workflows/: test_backend.yml
EVA_backend/Second-Me/: .gitignore
EVA_backend/Second-Me/lpm_kernel/: app.py
EVA_backend/Second-Me/lpm_kernel/L2/: l2_generator.py
EVA_backend/Second-Me/lpm_kernel/L2/data_pipeline/graphrag_indexing/: settings.yaml
EVA_backend/Second-Me/lpm_kernel/L2/dpo/: utils.py
EVA_backend/Second-Me/lpm_kernel/api/domains/user_llm_config/: routes.py
EVA_backend/Second-Me/lpm_kernel/api/services/: user_llm_config_service.py
EVA_backend/api_service/: __init__.py  apps.py  tests.py  urls.py  views.py
EVA_backend/config/: ai_settings.yaml  prompt_settings.yaml
EVA_backend/eva_backend_django/: __init__.py  apps.py  asgi.py  celery.py  routing.py  settings.py  urls.py
EVA_backend/eva_backend_django/utils/: port_manager.py  singleton.py
EVA_backend/eva_service/: apps.py  urls.py  views.py
EVA_backend/llm_manager_app/: apps.py  consumers.py
EVA_backend/llm_manager_app/utils/: llm_service.py
EVA_backend/master_evolution/: README.md  behavior_adapt.py  master_improvement.py  memory_summary.py  tasks.py  user_info_manager.py
EVA_backend/master_evolution/user_info_config/: extraction_patterns.json  info_categories.json
EVA_backend/memory_service_app/: README.md  apps.py  consumers.py  models.py  tasks.py
EVA_backend/memory_service_app/utils/: __init__.py  central_executive.py  memory_classifier_adapter.py  redis_client.py  system_notify.py
EVA_backend/memory_service_app/utils/secondme_integration/: __init__.py  config.py  memory_adapter.py  rule_adapter.py  secondme_config.json  working_memory_adapter.py
EVA_backend/prompts/: __init__.py  apps.py  default_prompts.py  generator.py  prompt.py
EVA_backend/secondme_master/: __init__.py  urls.py  views.py
EVA_backend/secondme_master/lpm_kernel/: app.py
EVA_backend/secondme_master/lpm_kernel/api/domains/kernel2/services/: chat_service.py
EVA_backend/secondme_master/lpm_kernel/api/domains/memories/: routes.py  urls.py  views.py
EVA_backend/secondme_master/lpm_kernel/file_data/: document_service.py  memory_service.py
EVA_backend/secondme_master/resources/L1/graphrag_indexing_output/subjective/: documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
EVA_backend/secondme_master/resources/L2/base_models/Qwen2.5-1.5B-Instruct/: model.safetensors
EVA_backend/secondme_master/resources/L2/data_pipeline/raw_data/: id_entity_mapping_subjective_v2.json  notes.json
EVA_backend/secondme_master/resources/model/output/gguf/Qwen2.5-1.5B-Instruct/: model.gguf.REMOVED.git-id
EVA_backend/secondme_master/resources/model/output/gguf/Qwen2.5-7B-Instruct/: model.gguf.REMOVED.git-id
EVA_backend/secondme_master/resources/model/output/merged_model/Qwen2.5-1.5B-Instruct/: config.json  model-00001-of-00004.safetensors.REMOVED.git-id  model-00002-of-00004.safetensors.REMOVED.git-id  model-00003-of-00004.safetensors.REMOVED.git-id  model-00004-of-00004.safetensors.REMOVED.git-id  model.safetensors.index.json
EVA_backend/secondme_master/resources/model/output/merged_model/Qwen2.5-7B-Instruct/: config.json  model-00001-of-00016.safetensors.REMOVED.git-id  model-00002-of-00016.safetensors.REMOVED.git-id  model-00003-of-00016.safetensors.REMOVED.git-id  model-00004-of-00016.safetensors.REMOVED.git-id  model-00005-of-00016.safetensors.REMOVED.git-id  model-00006-of-00016.safetensors.REMOVED.git-id  model-00007-of-00016.safetensors.REMOVED.git-id  model-00008-of-00016.safetensors.REMOVED.git-id  model-00009-of-00016.safetensors.REMOVED.git-id  model-00010-of-00016.safetensors.REMOVED.git-id  model-00011-of-00016.safetensors.REMOVED.git-id  model-00012-of-00016.safetensors.REMOVED.git-id  model-00013-of-00016.safetensors.REMOVED.git-id  model-00014-of-00016.safetensors.REMOVED.git-id  model-00015-of-00016.safetensors.REMOVED.git-id  model-00016-of-00016.safetensors.REMOVED.git-id
EVA_backend/secondme_master/resources/model/output/personal_model/Qwen2.5-1.5B-Instruct/checkpoint-5/: adapter_config.json  trainer_state.json
EVA_backend/secondme_master/resources/model/output/personal_model/Qwen2.5-1.5B-Instruct/checkpoint-9/: README.md  trainer_state.json
EVA_backend/secondme_master/resources/model/output/personal_model/Qwen2.5-7B-Instruct/checkpoint-5/: trainer_state.json
EVA_backend/secondme_master/resources/model/output/personal_model/Qwen2.5-7B-Instruct/checkpoint-9/: README.md  adapter_config.json  trainer_state.json
EVA_backend/secondme_master/scripts/: downgrade_migration.py  migrate_add_instance_password.py  run_migrations.py
EVA_backend/speech/: __init__.py  apps.py  base.py  chat_service.py  edge_tts_voice.py  say.py  speech_manager.py  tasks.py  urls.py  views.py
EVA_backend/task_manager_app/: tasks.py  urls.py  views.py
EVA_backend/utils/: response_handler.py
EVA_electron/: .gitignore  Dockerfile.electron  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
db/: init_db.py  memory.db  queries.py
gui/: gui_manager.py
temp/: create_env.ps1  start_docker.ps1
